# tome-linux

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  npx  tauri.conf.json
src-tauri/crates/tome-cli/: Cargo.toml
src-tauri/crates/tome-cli/src/: db.rs  main.rs  models.rs
src-tauri/crates/tome-cli/src/clients/: ollama.rs  openai.rs
src-tauri/src/: commands.rs  daemon.rs  deeplink.rs  http.rs  main.rs  mcp.rs  process.rs  window.rs
src-tauri/src/mcp/: process.rs  server.rs
src-tauri/src/window/: macos.rs
src/components/: StartupError.svelte  Toast.svelte  Toaster.svelte
src/components/Settings/: SmitheryKey.svelte
src/lib/: http.ts  relays.ts  updates.ts
src/lib/models/: engine.svelte.ts  setting.svelte.ts
src/lib/smithery/: client.ts  types.ts
src/lib/stores/: error.ts  toasts.ts
src/routes/: +layout.svelte
src/routes/dev/smithery-check/: +page.svelte  +page.ts
src/routes/mcp-servers/smithery/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte
