[package]
name = "tome-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.11", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
dialoguer = "0.11.0"
console = "0.15.8"
futures-util = "0.3"
